@@ -73,6 +73,7 @@ Fixed bugs
 - improve numerical stability in SCIPcomputeBilinEnvelope* by using double-double arithmetic
 - fixed bug related to releasing pending bound changes in tree.c
 - set STD FENV_ACCESS pragma to on in code that changes floating-point rounding mode
+- workaround problem with wrong GCC optimizations in SCIPintervalReciprocal
 
 Miscellaneous
 -------------
